--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ansi": "^0.3.1",
     "chalk": "^4.1.0",
+    "minimist": "^1.2.5",
+    "readline": "^1.3.0",
     "simple-spinner": "0.0.5"
   },
   "type": "module"
